# website

./: Cargo.toml  README.md
src/: config.rs  error.rs  main.rs  rst_parser.rs
src/rst_parser/: mod.rs  rst_error.rs
src/tests/: mod.rs
static/: style.css
static/raw_md/: 1resume.md
static/raw_md/projects/: motion_detector.md  website.md
static/raw_rst/: 1resume.rst
static/raw_rst/projects/: motion_detector.rst  website.rst
templates/: 404.html.tera  base.html.tera  index.html.tera  listing.html.tera  md_page.html.tera  rst_page.html.tera
