[package]
name = "jsite"
version = "0.1.0"
authors = ["Joey Hines <joey@ahines.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
regex = "1.3.4"
rocket_dyn_templates = { version="0.1.0-rc.1", features=["tera"] }
