[package]
name = "jsite"
version = "0.2.0"
authors = ["Joey Hines <joey@ahines.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"
regex = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.6.1"
tera = "1.17.1"
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.4.4", features = [
    "add-extension",
    "compression-full",
    "limit",
    "trace",
    "fs"
] }
tower-layer = "0.3.2"
axum-extra = "0.8.0"
structopt = "0.3.26"
pulldown-cmark = "0.9.3"
